# news_parser

./: Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
database/: dao.py  models.py
image_processing/: processor.py
parsers/: base_parser.py  site_a_parser.py  site_b_parser.py  site_c_parser.py
telegram_bot/: bot.py
